[package]
name = "dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
dotenv = "0.15.0"
log = "0.4.19"
env_logger = "0.10.0"
chrono = "0.4.26"
octocrab = "0.29.1"
log4rs = "1.2.0"

[dependencies.serenity]
default-features = false
features = ["model"
    ,"rustls_backend"
    ,"client"
    ,"gateway"
    ,"builder"
    ,"cache"
    ,"collector"]
version = "0.11.6" 
