[package]
name = "dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
dotenv = "0.15.0"
log = "0.4.0"
env_logger = "0.9.0"
chrono = "0.4.23"
octocrab = "0.18.1"
log4rs = "1.2.0"
axum = "0.6.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.serenity]
default-features = false
features = ["model"
    ,"rustls_backend"
    ,"client"
    ,"gateway"
    ,"builder"
    ,"cache"
    ,"collector"]
version = "0.11.5" 
